# x_foc_controller

./: .gitignore  CMakeLists.txt  README.md
main/: CMakeLists.txt  main.c
main/common/: common_def.h  common_macro.h
main/core/: x_foc_core.c  x_foc_core.h
main/demo/: _demo_main.c  _demo_ol_velocity.c
main/drivers/: x_mcpwm.c  x_mcpwm.h
main/motor/: x_motor.c  x_motor.h
main/sensor/: as5600.c  as5600.h
main/utils/: x_utils.h
